--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -16,6 +16,10 @@ layout: default
             </div><!--/.hero-body-->
         </div><!--/.container-fluid-->
     </section><!--/.hero -->
+    {% for post in site.posts %}    
+    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://erjjones.github.com{{ post.url }}#disqus_thread"></a></small></p>            
+{% endfor %}    
     <section>
         <div class="container-fluid">
             <a href="#" ng-click="ctrl.reverse = !ctrl.reverse" ng-class="{reverse:ctrl.reverse}">Sort Most Recent</a>
