--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,7 +18,7 @@ layout: default
     </section><!--/.hero -->
     {% for post in site.posts %}    
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-    <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://erjjones.github.com{{ post.url }}#disqus_thread"></a></small></p>            
+    <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://gabrysiak.github.com{{ post.url }}"></a></small></p>            
 {% endfor %}    
     <section>
         <div class="container-fluid">
