--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,50 +1,38 @@
 ---
 layout: default
 ---
-<div ng-controller="searchCtrl as ctrl" ng-init="ctrl.init('blog')" ng-cloak>
+<div ng-controller="searchCtrl as ctrl" ng-cloak>
     <section class="hero">
         <div class="container-fluid">
-            <div class="hero-body hero-body-medium">
+            <div class="hero-body hero-body-small">
                 <div class="input-group">
                     <div class="input-group-addon"><span class="fa fa-search"></span></div>
                     <input type="search" class="form-control" id="keywords" placeholder="Type Some Keywords" ng-model="ctrl.query">
                 </div>
-                <div class="filter-options">
-                    <a class="btn btn-primary form-control" href="#" ng-click="ctrl.sort='video'">Videos</a>
-                    <a class="btn btn-primary form-control" href="#" ng-click="ctrl.sort='document'">Documents</a>
-                    <a class="btn btn-primary form-control" href="#" ng-click="ctrl.sort='guide'">Guides</a>
-                    <a class="btn btn-primary form-control" href="#" ng-click="ctrl.sort='report'">Reports</a>
-                    <a class="btn btn-primary form-control" href="#" ng-click="ctrl.sort=''">Clear Filter</a>
-                </div>  
+                <a class="btn btn-primary" href="#" ng-click="ctrl.query='video'">Videos</a>
+                <a class="btn btn-primary" href="#" ng-click="ctrl.query='document'">Documents</a>
+                <a class="btn btn-primary" href="#" ng-click="ctrl.query='guide'">Guides</a>
+                <a class="btn btn-primary" href="#" ng-click="ctrl.query='report'">Reports</a>
             </div><!--/.hero-body-->
         </div><!--/.container-fluid-->
     </section><!--/.hero -->
-      <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
     <section>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-3" ng-repeat="post in ctrl.posts | filter:ctrl.query | filter: ctrl.sort | orderBy: post.date : ctrl.reverse">
-                    <div class="card card-list-item">
-                        <div class="category-type"><i class="fa fa-[[ post.categories ]]"></i></div>
-                        <img class="card-img-top" ng-src="[[ post.image ]]" alt="">
+            <a href="#" ng-click="ctrl.reverse = !ctrl.reverse" ng-class="{reverse:ctrl.reverse}">Sort Most Recent</a>
+
+            <div class="container">
+                <div class="col-sm-3" ng-repeat="post in ctrl.posts | filter:ctrl.query | orderBy: post.date : ctrl.reverse">
+                    <div class="card">
+                        <img class="card-img-top" src="http://placehold.it/400x300" alt="Card image cap">
                         <div class="card-block">
                             <h4 class="card-title"><a class="post-link" href="[[post.url]]" ng-bind="post.title"></a></h4>
-                            <div class="card-text">{{ content | truncate:50 }}</div>
-                            <a href="[[post.url]]" class="btn btn-secondary">Learn More</a>
+                            <date class="post-meta" ng-bind="post.date"></date>
+                            <p class="card-text">{{ content | truncate:50 }}</p>
+                            <a href="[[post.url]]" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
-            </div><!--/.row-->
+            </div>
         </div><!--/.container-fluid-->
     </section><!--/section -->
 </div>
