--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -8,8 +8,8 @@
 
 	//add multiple background images here
 	background: $color-primary;
-	background: url(/img/hero-nodes-top-left.png) left top no-repeat, 
-				url(/img/hero-nodes-bottom-right.png) right bottom no-repeat $color-primary;
+	background: url(../img/hero-nodes-top-left.png) left top no-repeat, 
+				url(../img/hero-nodes-bottom-right.png) right bottom no-repeat $color-primary;
 
 	
 	//header spacing
@@ -20,11 +20,6 @@
 	.hero-body {
 		&.hero-body-small {
 			max-width: 650px;
-			margin: auto;
-		}
-
-		&.hero-body-medium {
-			max-width: 950px;
 			margin: auto;
 		}	
 	} //eof hero-body
